python3.13 (3.13.0~b3-4) UNRELEASED; urgency=medium

  [ Matthias Klose ]
  * Set ELF_PACKAGE_METADATA, if unset.

  [ Benjamin Drung ]
  * debian/rules: Use pkg-info.mk
  * debian/rules: Use architecture.mk
  * Rely on SOURCE_DATE_EPOCH for reproducibility

  [ Graham Inggs ]
  * Skip test_exceptions and test_repl which never run to
    completion on the Ubuntu autopkgtest infrastructure

 -- Matthias Klose <doko@debian.org>  Thu, 11 Jul 2024 14:41:19 +0200

python3.13 (3.13.0~b3-3) unstable; urgency=medium

  * Remove distutils references, it was removed in 3.12.
  * Remove pysetup3(1), it was removed in 3.2.
  * Patch: Avoid munmap() of the zero page when freeing unallocated arenas.

 -- Stefano Rivera <stefanor@debian.org>  Tue, 09 Jul 2024 01:33:11 +0200

python3.13 (3.13.0~b3-2) unstable; urgency=medium

  * Patch: Disable perf_trampoline or riscv64, for now.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 03 Jul 2024 17:05:54 +0200

python3.13 (3.13.0~b3-1) unstable; urgency=medium

  * New upstream beta.
  * Use https in watch file.
  * Refresh patches.
  * Migrate some more bits of packaging from 3.12 to 3.13.
  * Drop old breaks+replace.
  * Rename python3.12-updates.diff to compileall-minimal.diff.
  * Document that _typing is included in -minimal.
  * Update symbols file.
  * Install python3-wheel-whl in the testsuite autopkgtests. Not installed in
    venvs by default (so not a dependency of python3-venv) but required by
    tests.
  * Add a missing import to ntpath-import.diff.
  * Patch: Handle missing _pyrepl in the -minimal interpreter.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 03 Jul 2024 12:17:07 +0200

python3.13 (3.13.0~b2-1) unstable; urgency=medium

  [ Matthias Klose ]
  * Configure without --with-dtrace on the Hurd.

  [ Stefano Rivera ]
  * Python 3.13.0 beta 2 snapshot.
  * Refresh patches.
  * Bump watch file to 3.13.

 -- Stefano Rivera <stefanor@debian.org>  Tue, 11 Jun 2024 15:14:35 +0100
