@@ -2,6 +2,7 @@ python3.13 (3.13.0~b3-4) UNRELEASED; urgency=medium
 
   [ Matthias Klose ]
   * Set ELF_PACKAGE_METADATA, if unset.
+  * Fix multiarch path for hurd-amd64. Addresses: #1076321.
 
   [ Benjamin Drung ]
   * debian/rules: Use pkg-info.mk
